added the bare html outline of portfolio, mostly just the nav and nav links,created section ids for portfolio.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Julian Floyd's Portfolio</title>
+        <!--link css stylesheet here, once you begin your stylesheet -->
+    </head>
+    <body>
+        
+        <!--Navigation and Header will begin here.-->
+        <header>
+            <h1>
+                <a href="/">Julian Floyd</a>
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+
+                    <li>
+                        <a href="#my-work">My Work</a>
+                    </li>    
+
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
+<!--About Me section starts, include a picture or avatar of myself -->
+        <section id="about-me">
+
+        </section>
+
+
+        <!--My Work section begins, use <main> semantic tag-->
+        <main id="my-work">
+
+        </main>
+        
+        <!--Contact Me Section begins-->
+        <section id="contact-me">
+
+        </section>
+
+        <!--Footer begins here-->
+    </body>
+</html>
