added a picture of myself, bare contact me content and link added, created some ids and classes in main, currently working on my work imgs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!--Navigation and Header will begin here.-->
         <header>
             <h1>
-                <a href="/">Julian Floyd</a>
+                <a href="../challenge-02/index.html">Julian Floyd</a>
             </h1>
             <nav>
                 <ul>
@@ -30,22 +30,84 @@
             </nav>
         </header>
 
-<!--About Me section starts, include a picture or avatar of myself -->
+<!--About Me section starts, include a picture or avatar of myself, don't forget to create an assets/images directory -->
         <section id="about-me">
+            <h2> About Me </h2>
+            <img src="../challenge-02/assets/images/me.jpg" 
+            height="300"
+            width="250"/>   <br />
 
+            <p class="bio">
+                Greetings, my name is Julian Floyd, welcome to my portfolio, and here is a little about myself:
+                <ul>
+                    <li>
+                        I was born and raised in the south Bay Area.
+                    </li>
+                    <li>
+                        My undergraduate alma mater is San Jose State University.
+                    </li>
+                    <li>
+                        I have a certificate from UCSC Silicon Valley Extension in Technical Writing and Communication.
+                    </li>
+                    <li>
+                        I am currently enrolled in the UC Berkeley Extension's Full-Stack-Web-Development Bootcamp.
+                    </li>
+                </ul>
+            </p>
         </section>
 
 
         <!--My Work section begins, use <main> semantic tag-->
-        <main id="my-work">
+        <main id="my-work" class="works">
+            <h2>
+                My Work
+            </h2>
+            <br />
+            <h3>
+                Web Development Applications
+            </h3>
+                <p>
+                    <a href="">
+
+                        <img src=""/> 
+                    </a> 
+                </p>
+            <h3>
+                Technical Writing Work from my time at UCSC
+            </h3>
 
         </main>
         
-        <!--Contact Me Section begins-->
+        <!--Contact Me/Footer Section begins-->
         <section id="contact-me">
+            <footer>
+                <h2>
+                    Contact Me
+                </h2>
+                <h3>
+                    Phone:
+                </h3>
+                    <p>
+                        (408) 656-8877
+                    </p>
+                <h3>
+                    Email:
+                </h3>
+                    <p>
+                        floydjulian1991@gmail.com
+                    </p>
+                <h3>
+                    LinkedIn:
+                </h3>
+                    <p>
+                        <a href="https://www.linkedin.com/in/julian-floyd-89a696217/" target="_blank">
+                            Julian Floyd's LinkedIn Profile
+                        </a>
+                    </p>
+            </footer>
 
         </section>
 
-        <!--Footer begins here-->
+        
     </body>
 </html>
