added img src within href for two work samples in <main>

--- a/index.html
+++ b/index.html
@@ -66,16 +66,35 @@
             <h3>
                 Web Development Applications
             </h3>
+            <br />
+            <h4>Refactored Horiseon Page</h4>
                 <p>
-                    <a href="">
+                    <a href="https://jflo919.github.io/Horiseon-challenge-01/">
 
-                        <img src=""/> 
+                        <img src="../challenge-02/assets/images/refactoring.jpg" 
+                        width="500" 
+                        height="600" /> 
                     </a> 
                 </p>
+            <h4>Run Buddy!</h4>
+                <p>
+                    <a href="https://jflo919.github.io/run-buddy/">
+                        
+                        <img src="../challenge-02/assets/images/run.jpg"
+                        width="400"
+                        height="500"/>
+                    </a>
+                </p>
+
+
             <h3>
                 Technical Writing Work from my time at UCSC
             </h3>
-
+                <p>
+                    <a href="">
+                        <img src="" />
+                    </a>
+                </p>
         </main>
         
         <!--Contact Me/Footer Section begins-->
