added some more imgs in <main> linked img src../writing.jpg to modular doc pdf

--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
             <h3>
                 Technical Writing Work from my time at UCSC
             </h3>
-                <p>
-                    <a href="">
-                        <img src="" />
+                <p> 
+                    <h4>Adobe Acrobat Documentation</h4> <br />
+                    <a href="../challenge-02/assets/docs/Modular doc_final_Floyd 2 - Copy.pdf">
+                        <img src="../challenge-02/assets/images/writing.jpg" 
+                        width="400"
+                        height="500"/>
                     </a>
                 </p>
         </main>
