added more images and hrefs to main, including some of my technical writing samples from ucsc

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 Web Development Applications
             </h3>
             <br />
-            <h4>Refactored Horiseon Page</h4>
+            <h4>Refactored Horiseon Page</h4> <br />
                 <p>
                     <a href="https://jflo919.github.io/Horiseon-challenge-01/">
 
@@ -76,7 +76,7 @@
                         height="600" /> 
                     </a> 
                 </p>
-            <h4>Run Buddy!</h4>
+            <h4>Run Buddy!</h4> <br />
                 <p>
                     <a href="https://jflo919.github.io/run-buddy/">
                         
@@ -85,7 +85,12 @@
                         height="500"/>
                     </a>
                 </p>
-
+            <h4>Password Generator</h4> <br />
+                <p>
+                    <img src="../challenge-02/assets/images/password stock.jpg" 
+                    width="400"
+                    height="500" />
+                </p>    
 
             <h3>
                 Technical Writing Work from my time at UCSC
@@ -96,6 +101,15 @@
                         <img src="../challenge-02/assets/images/writing.jpg" 
                         width="400"
                         height="500"/>
+                    </a>
+                </p>
+
+                <p>
+                    <h4>Thunderbird Help Wireframe</h4> <br />
+                    <a href="../challenge-02/assets/docs/Julian_Floyd storyboard draft 2.5.pdf">
+                        <img src="../challenge-02/assets/images/tb.jpg" 
+                        width="400"
+                        height="500" />
                     </a>
                 </p>
         </main>
