added css styles to header, nav, and about me sections

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             height="300"
             width="250"/>   <br />
 
-            <p class="bio">
+            <div class="bio">
                 Greetings, my name is Julian Floyd, welcome to my portfolio, and here is a little about myself:
                 <ul>
                     <li>
@@ -56,7 +56,7 @@
                         I am currently enrolled in the UC Berkeley Extension's Full-Stack-Web-Development Bootcamp.
                     </li>
                 </ul>
-            </p>
+            </div>
         </section>
 
 
