--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <section id="contact-me" class="contact">
             
                 <h2>
-                    Contact Me
+                    Contact Me:
                 </h2>
                 <h3>
                     Phone:
