added z-index to header, gave nav ul it's own class, commented out a lot of code that may or may not be deleted later on; I'm just playing around with flexbox, trying different ideas out.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="../challenge-02/index.html">Julian Floyd</a>
             </h1>
             <nav class="navigation">
-                <ul>
+                <ul class="nav">
                     <li>
                         <a href="#about-me">About Me</a>
                     </li>
