added some changes to  <main> my-work and bio, includes: font changes, flex-wrap for images in my work, added some responsiveness for max width of 768px that is mostly effective but needs some work, the about me h2 needs to be positioned to the far left, so it is consistent with the other h2 elements, or the other h2s need to be centered, needs to be consistent. CSS code is not DRY, try to tighten it up before submitting assignment.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <!--About Me section starts, include a picture or avatar of myself, don't forget to create an assets/images directory -->
         <section id="about-me" class="about-me">
-            <h2> About Me </h2>
+            <h2> About Me: </h2>
             <img src="../challenge-02/assets/images/me.jpg" 
             height="300"
             width="250"/>   <br />
@@ -63,17 +63,17 @@
         <!--My Work section begins, use <main> semantic tag-->
         <main id="my-work" class="works">
             <h2>
-                My Work
+                My Work:
             </h2>
             <br />
             
         <div class="web-applications">
-            <h3>       
+            <div class="web-applications-children">   <h3>       
                 Web Development Applications
             </h3>
             <br />
             <h4>Refactored Horiseon Page</h4> <br />
-                <p>
+                <p class="works">
                     <a href="https://jflo919.github.io/Horiseon-challenge-01/" target="_blank">
 
                         <img src="../challenge-02/assets/images/refactoring.jpg" 
@@ -82,7 +82,7 @@
                     </a> 
                 </p> <br />
             <h4>Run Buddy!</h4> <br />
-                <p>
+                <p class="works">
                     <a href="https://jflo919.github.io/run-buddy/" target="_blank">
                         
                         <img src="../challenge-02/assets/images/run.jpg"
@@ -91,18 +91,19 @@
                     </a>
                 </p> <br />
             <h4>Password Generator</h4> <br />
-                <p>
+                <p class="works">
                     <img src="../challenge-02/assets/images/password stock.jpg" 
                     width="400"
                     height="500" />
                 </p>    
-        </div> 
+         </div>
+      </div> 
         <br />
         <div class="technical-writing">
             <h3>
                 Technical Writing Work from my time at UCSC
             </h3>  </br>
-                <p> 
+                <p class="works"> 
                     <h4>Adobe Acrobat Documentation</h4> <br />
                     <a href="../challenge-02/assets/docs/Modular doc_final_Floyd 2 - Copy.pdf" target="_blank">
                         <img src="../challenge-02/assets/images/writing.jpg" 
@@ -111,7 +112,7 @@
                     </a>
                 </p>
 
-                <p> <br />
+                <p class="works"> <br />
                     <h4>Thunderbird Help Wireframe</h4> <br />
                     <a href="../challenge-02/assets/docs/Julian_Floyd storyboard draft 2.5.pdf" target="_blank">
                         <img src="../challenge-02/assets/images/tb.jpg" 
