still trying to update link paths

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!--About Me section starts, include a picture or avatar of myself, don't forget to create an assets/images directory -->
         <section id="about-me" class="about-me">
             <h2> About Me: </h2>
-            <img src="./challenge-02/assets/images/me.jpg" 
+            <img src="./assets/images/me.jpg" 
             height="300"
             width="250"/>   <br />
 
@@ -76,7 +76,7 @@
                 <p class="works">
                     <a href="https://jflo919.github.io/Horiseon-challenge-01/" target="_blank">
 
-                        <img src="./challenge-02/assets/images/refactoring.jpg" 
+                        <img src="./assets/images/refactoring.jpg" 
                         width="500" 
                         height="600" /> 
                     </a> 
@@ -85,14 +85,14 @@
                 <p class="works">
                     <a href="https://jflo919.github.io/run-buddy/" target="_blank">
                         
-                        <img src="./challenge-02/assets/images/run.jpg"
+                        <img src="./assets/images/run.jpg"
                         width="400"
                         height="500"/>
                     </a>
                 </p> <br />
             <h4>Password Generator</h4> <br />
                 <p class="works">
-                    <img src="./challenge-02/assets/images/password stock.jpg" 
+                    <img src="./assets/images/password stock.jpg" 
                     width="400"
                     height="500" />
                 </p>    
@@ -105,8 +105,8 @@
             </h3>  </br>
                 <p class="works"> 
                     <h4>Adobe Acrobat Documentation</h4> <br />
-                    <a href="./challenge-02/assets/docs/Modular doc_final_Floyd 2 - Copy.pdf" target="_blank">
-                        <img src="./challenge-02/assets/images/writing.jpg" 
+                    <a href="./assets/docs/Modular doc_final_Floyd 2 - Copy.pdf" target="_blank">
+                        <img src="./assets/images/writing.jpg" 
                         width="400"
                         height="500"/>
                     </a>
@@ -114,8 +114,8 @@
 
                 <p class="works"> <br />
                     <h4>Thunderbird Help Wireframe</h4> <br />
-                    <a href="./challenge-02/assets/docs/Julian_Floyd storyboard draft 2.5.pdf" target="_blank">
-                        <img src="./challenge-02/assets/images/tb.jpg" 
+                    <a href="./assets/docs/Julian_Floyd storyboard draft 2.5.pdf" target="_blank">
+                        <img src="./assets/images/tb.jpg" 
                         width="400"
                         height="500" />
                     </a>
