--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                 Web Development Applications
             </h3>
             <br />
-            <h4>Refactored Horiseon Page</h4> <br />
+            <h4>Popcorn-Fetcher (collaboration)</h4> <br />
                 <p class="works">
-                    <a href="https://jflo919.github.io/Horiseon-challenge-01/" target="_blank">
+                    <a href="https://alananibal.github.io/Popcorn-Fetcher/#" target="_blank">
 
                         <img src="./assets/images/refactoring.jpg" 
                         width="500" 
